# libbdplus

./: .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  README.markdown  README.md  README.txt  configure.ac
SMC/: libbdplus.sln  libbdplus.vcxproj  libbdplus.vcxproj.filters  version.h
SMC/src/libbdplus/: bdplus-version.h
SMP/: SMP.patch  config.h  libbdplus.def  libbdplus.sln  libbdplus.vcxproj  libbdplus.vcxproj.filters  libbdplus_deps.sln  libbdplus_files.props  libbdplus_winrt.vcxproj  libbdplus_winrt.vcxproj.filters  libbdplus_with_latest_sdk.bat  project_get_dependencies.bat  readme.txt  version.h
SMP/src/libbdplus/: bdplus-version.h
SMP/sys/: stat.h
src/: Makefile.am  libbdplus.pc.in
src/examples/: bdplus_test.c  convtab_dump.c
src/file/: configfile.c  configfile.h  dir_posix.c  dir_win32.c  dirs.h  dirs_darwin.c  dirs_win32.c  dirs_xdg.c  file.c  file.h  file_default.c  file_default.h  file_posix.c  file_win32.c  filesystem.h
src/libbdplus/: bdplus-version.h.in  bdplus.c  bdplus.h  bdplus_config.c  bdplus_config.h  bdplus_data.h  internal.c  internal.h  loader.c  loader.h
src/libbdplus/bdsvm/: diff.c  diff.h  dlx.c  dlx.h  dlx_internal.h  event.c  event.h  interface.c  interface.h  loader.c  loader.h  segment.c  segment.h  sha1.c  sha1.h  slot.c  slot.h  slot_data.h  trap.c  trap.h  trap_helper.c  trap_helper.h
src/util/: attributes.h  logging.c  logging.h  macro.h  mutex.c  mutex.h  strutl.c  strutl.h
